--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import re\n",
     "from collections import Counter, deque, namedtuple\n",
-    "from functools import cmp_to_key\n",
+    "from functools import cmp_to_key, cache\n",
     "from itertools import product, combinations\n",
     "from typing import List"
    ]
@@ -1602,6 +1602,173 @@
    ],
    "source": [
     "day10_part2(final_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11: Plutonian Pebbles\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_stones = [\"125\", \"17\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11_part1(stones, blinks):\n",
+    "    for _ in range(blinks):\n",
+    "        new_stones = []\n",
+    "        for stone in stones:\n",
+    "            if stone == \"0\":\n",
+    "                stone = \"1\"\n",
+    "                new_stones.append(stone)\n",
+    "            elif (len(stone) % 2) == 0:\n",
+    "                new_left_stone = str(int(stone[:len(stone)//2]))\n",
+    "                new_right_stone = str(int(stone[len(stone)//2:]))\n",
+    "                new_stones.extend([new_left_stone, new_right_stone])\n",
+    "            else:\n",
+    "                stone = str(int(stone) * 2024)\n",
+    "                new_stones.append(stone)\n",
+    "        stones = new_stones\n",
+    "    return len(stones)\n",
+    "\n",
+    "day11_part1(example_stones, blinks=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55312"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day11_part1(example_stones, blinks=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "183248"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_stones = file_to_list(\"./inputs/input11.txt\")[0].split(\" \")\n",
+    "day11_part1(final_stones, blinks=25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55312"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@cache\n",
+    "def blink(stone, n):\n",
+    "    count = 0\n",
+    "    if n == 0:\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        if stone == \"0\":\n",
+    "            count += blink(\"1\", n-1)\n",
+    "        elif (len(stone) % 2) == 0:\n",
+    "            new_left_stone = str(int(stone[:len(stone)//2]))\n",
+    "            new_right_stone = str(int(stone[len(stone)//2:]))\n",
+    "            count += blink(new_left_stone, n-1)\n",
+    "            count += blink(new_right_stone, n-1)\n",
+    "        else:\n",
+    "            count += blink(str(int(stone) * 2024), n-1)\n",
+    "    return count\n",
+    "\n",
+    "\n",
+    "def day11_part2(stones, blinks):\n",
+    "    count = 0\n",
+    "    for stone in stones:\n",
+    "        count += blink(stone, blinks)\n",
+    "    return count\n",
+    "\n",
+    "day11_part2(example_stones, blinks=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "218811774248729"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day11_part2(final_stones, blinks=75)"
    ]
   }
  ],
